[gd_scene load_steps=11 format=3 uid="uid://gt7gjlsr0hd8"]

[ext_resource type="Script" uid="uid://dfjkm8sxslp0b" path="res://Scripts/Screens/PauseMenu.gd" id="1_2cubc"]
[ext_resource type="Texture2D" uid="uid://cilsxkcfi16ny" path="res://Assets/UI/UI - Words/Words without BG/UI - Words1.png" id="2_4nyxp"]
[ext_resource type="Texture2D" uid="uid://bnl855k1onnq2" path="res://Assets/UI/UI - Words/Words With BG/UI - Words1.png" id="3_72fny"]
[ext_resource type="Texture2D" uid="uid://bw8eaqowtaysr" path="res://Assets/UI/UI - Words/Words without BG/UI - Words10.png" id="4_hn874"]
[ext_resource type="Texture2D" uid="uid://qf7kwakanxxt" path="res://Assets/UI/UI - Words/Words With BG/UI - Words10.png" id="5_ph8g7"]
[ext_resource type="Texture2D" uid="uid://dhshgur1gd8uv" path="res://Assets/UI/UI - Words/Words without BG/UI - Words13.png" id="6_ceee6"]
[ext_resource type="Texture2D" uid="uid://ht7l43xtoe76" path="res://Assets/UI/UI - Words/Words With BG/UI - Words13.png" id="7_ptjd1"]
[ext_resource type="Texture2D" uid="uid://14iy6ef0f6u" path="res://Assets/UI/UI - Words/Words without BG/UI - Words3.png" id="8_b3xtt"]
[ext_resource type="Texture2D" uid="uid://wcsh4w1lwjk8" path="res://Assets/UI/UI - Words/Words With BG/UI - Words3.png" id="9_i3x4d"]
[ext_resource type="Texture2D" uid="uid://0ek0vwas4wmp" path="res://Assets/UI/UI - ICONS/UI - Icons13.png" id="10_72fny"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2cubc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -92.0
offset_right = 106.0
offset_bottom = 86.0
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Continue" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_4nyxp")
texture_pressed = ExtResource("3_72fny")
texture_hover = ExtResource("3_72fny")
texture_disabled = ExtResource("2_4nyxp")
texture_focused = ExtResource("3_72fny")

[node name="MainMenu" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_hn874")
texture_pressed = ExtResource("5_ph8g7")
texture_hover = ExtResource("5_ph8g7")
texture_disabled = ExtResource("4_hn874")
texture_focused = ExtResource("5_ph8g7")

[node name="Save" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_ceee6")
texture_pressed = ExtResource("7_ptjd1")
texture_hover = ExtResource("7_ptjd1")
texture_disabled = ExtResource("6_ceee6")
texture_focused = ExtResource("7_ptjd1")

[node name="Quit" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_b3xtt")
texture_pressed = ExtResource("9_i3x4d")
texture_hover = ExtResource("9_i3x4d")
texture_disabled = ExtResource("8_b3xtt")
texture_focused = ExtResource("9_i3x4d")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(464, 254)
texture = ExtResource("10_72fny")

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
